--- a/views/admin-lte/statics/about.ejs
+++ b/views/admin-lte/statics/about.ejs
@@ -13,15 +13,112 @@
 
     <div class="content-wrapper">
         <section class="content">
-            <h3> About CourseMapper</h3>
-            <p>
-                CourseMapper is a collaborative learning tools, where students can work together on course contents.
-            </p>
+            <div class="box">
 
-            <h4>Teams </h4>
+                <div class="box-header">
+                    <h3>About CourseMapper</h3>
+                </div>
+                <div class="box-body">
+                    <p>
+                        CourseMapper is a collaborative learning tools, where students can work together on course
+                        contents.
+                        CourseMapper contains many features, such as: Collaborative Tool to create course map, Video
+                        viewer and
+                        annotation tool for lecture videos, and PDF reader and annotation tool.
+                        And many other new features that may come in the future.
+                    </p>
 
-        </section>
+                </div>
+            </div>
+            <div class="box-header">
+                <h3>Teams </h3>
+            </div>
+            <div class="box">
+                <div class="box-header">
+                    <h4>Overall UX, Widget System, REST API Implementation and Course Map Tool</h4>
+                </div>
+                <div class="box-body">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-6">
+                            <img src="/img/coursemap.png" style="width: 100%">
+                        </div>
+
+                        <div class="col-xs-12 col-sm-6">
+                            Implemented by R. Laksono <br>
+                            <h4>Technologies:</h4>
+                            <ul>
+                                <li>NodeJS, ExpressJS, PassportJS, Socket.io</li>
+                                <li>MongoDB, Mongoose</li>
+                                <li>AdminLTE, Bootstrap framework, jQuery, jQueryUI</li>
+                                <li>GridStack, JSPlumb, QuillJS</li>
+                                <li>Angular and many others</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="box-header"><h4>PDF Reader and Annotation Tool</h4>
+                </div>
+                <div class="box-body">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-6">
+                            <img src="/img/pdf.png" style="width:100%">
+                        </div>
+                        <div class="col-xs-12 col-sm-6">
+                            Implemented by J. Klöckner and I. Dimitrialis.<br><h4>Technologies:</h4>
+                            <ul>
+                                <li>PDF.js</li>
+                                <li>Including some libraries from the list above and many other smaller libraries.</li>
+                            </ul>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+            <div class="box">
+                <div class="box-header">
+                    <h4>Video Viewer and Annotation tools</h4></div>
+
+                <div class="box-body">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-6"><img src="/img/video.png" style="width:100%">
+                        </div>
+                        <div class="col-xs-12 col-sm-6">Implemented by M. Momchil.<br> <h4>Technologies:</h4>
+                            <ul>
+                                <li>Videogular</li>
+                                <li>FootprintJS</li>
+                                <li>Including some libraries from the list above and many other smaller libraries.</li>
+
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box-header"><h4>Analytics Widgets on Courses, Videos and PDFs</h4>
+                </div>
+                <div class="box-body">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-6"><h4>Technologies:</h4>
+                            <ul>
+                                <li>ChartJS</li>
+                                <li>Including some libraries from the list above and many other smaller libraries.</li>
+
+                            </ul>
+                        </div>
+                        <div class="col-xs-12 col-sm-6"> Implemented by Z. Sofyan.<br>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </div>
+</div>
+
+</section>
+</div>
 </div><!-- ./wrapper -->
 <% include ../jsfooter %>
 <% include ../footer %>
