--- a/views/admin-lte/catalogs/course.ejs
+++ b/views/admin-lte/catalogs/course.ejs
@@ -13,5 +13,7 @@
 <% include ../jsfooter %>
 
 <script src="/gridstack/gridstack.js"></script>
-
+<!--Add angular chart to wrap whole tabs here-->
+<script src="/chartjs/Chart.min.js"></script>
+<script src="/chartjs/angular-chart.min.js"></script>
 <% include ../footer %>
