--- a/views/course-analytics/history-analytics.ejs
+++ b/views/course-analytics/history-analytics.ejs
@@ -1,34 +1,38 @@
-<div class="box-body no-padding" ng-controller="BarHistoryAnalyticsController">
+<div class="box-body no-padding"  ng-controller="BarHistoryAnalyticsController">
+
+    <!--Using chartjs unfortunately does not work with tab-->
     <div class="nav-tabs-custom">
-        <!-- Tabs within a box -->
+        <!--Tabs within a box-->
         <ul class="nav nav-tabs pull-right" ng-init="tab = 1">
-            <li class="active"><a href ng-click="tab = 1" data-toggle="tab">Views</a></li>
-            <li><a href ng-click="tab = 2" data-toggle="tab">Following Users</a></li>
-            <li><a href ng-click="tab = 3" data-toggle="tab">Likes</a></li>
-            <li><a href ng-click="tab = 4" data-toggle="tab">Comments</a></li>
+            <li class="active"><a href ng-click="tab = 1" data-toggle="tab">Enrolled Users</a></li>
+            <li><a href ng-click="tab = 2" data-toggle="tab">Discussions</a></li>
+            <li><a href ng-click="tab = 3" data-toggle="tab">PDF Materials</a></li>
+            <li><a href ng-click="tab = 4" data-toggle="tab">Video Materials</a></li>
         </ul>
         <br>
 
-        <div class="views-chart no-padding" ng-show="tab ===1">
-            <canvas id="bar" width="500" height="135" class="chart chart-bar" chart-data="dataViews"
-                    chart-labels="labels">
+        <div class="enrolled-user-chart no-padding" ng-show="tab ===1">
+            <canvas id="bar" width="500" height="135" class="chart chart-bar" chart-data="dataEnrolledUserMonthly"
+                    chart-labels="labelEnrolledUserMonthly">
             </canvas>
         </div>
-        <div class="following-users-chart" ng-show="tab === 2">
-            <canvas id="bar" width="500" height="135" class="chart chart-bar" chart-data="dataFollowingUsers"
-                    chart-labels="labels">
+        <div class="discussion-chart" ng-show="tab === 2">
+            <canvas id="bar" width="500" height="135" class="chart chart-bar" chart-data="dataDiscussionMonthly"
+                    chart-labels="labelDiscussionMonthly">
             </canvas>
         </div>
-        <div class="likes-chart" ng-show="tab === 3">
-            <canvas id="bar" width="500" height="135" class="chart chart-bar" chart-data="dataLikes"
-                    chart-labels="labels">
+        <div class="pdf-chart" ng-show="tab === 3">
+            <canvas id="bar" width="500" height="135" class="chart chart-bar" chart-data="dataPdfUploadMonthly"
+                    chart-labels="labelPdfUploadMonthly">
             </canvas>
         </div>
-        <div class="comments-chart" ng-show="tab === 4">
-            <canvas id="bar" width="500" height="135" class="chart chart-bar" chart-data="dataComments"
-                    chart-labels="labels">
+        <div class="video-chart" ng-show="tab === 4">
+            <canvas id="bar" width="500" height="135" class="chart chart-bar" chart-data="dataVideoUploadMonthly"
+                    chart-labels="labelVideoUploadMonthly">
             </canvas>
         </div>
 
     </div><!-- /.nav-tabs-custom -->
+    <!--<nvd3 options='options' data='data'></nvd3>-->
+    {{twoData}}
 </div>
