--- a/views/admin-lte/statics/about.ejs
+++ b/views/admin-lte/statics/about.ejs
@@ -4,7 +4,7 @@
     <!-- Header Navbar -->
     <% include ../mainMenu %>
 
-    <section class="content-header">
+    <section class="content-header" ng-controller="aboutController">
         <ol class="breadcrumb">
             <li><a href="/"><i class="fa fa-home"></i> Home</a></li>
             <li>About CourseMapper</li>
@@ -27,7 +27,9 @@
                         annotation tool for lecture videos, and PDF reader and annotation tool.
                         And many other new features that may come in the future.
                     </p>
-
+                    <br>
+                    <p>CourseMapper project is supervised
+                        Supervised by:<strong> Dr. rer. nat Mohamed Amine Chatti</strong></p>
                 </div>
             </div>
             <div class="box-header">
