filter tag works again

--- a/views/admin-lte/catalogs/courseConfigModal.ejs
+++ b/views/admin-lte/catalogs/courseConfigModal.ejs
@@ -74,7 +74,9 @@
                             <% if(isInIframe){ %>
                             <% } else { %>
                             <div class="control-group">
-                                <label class="control-label" for="description">Embed Settings</label>
+                                <label class="control-label" for="description">Embed Settings<br>
+                                    <small>These settings will take effect only if the page is loaded through an iframe.</small>
+                                </label>
 
                                 <div class="form-group">
                                     <%
