--- a/views/admin-lte/recommendCategory.ejs
+++ b/views/admin-lte/recommendCategory.ejs
@@ -24,7 +24,7 @@
                                       ng-submit="recommend(recommendForm.$valid)" novalidate>
                                     <fieldset>
                                         <div id="legend">
-                                            <h2>Recommend A Category</h2>
+                                            <h2>Recommend Category</h2>
                                         </div>
                                         <div class="control-group">
                                             <!-- Username -->
