recomen cat in actionbar, "most popular", filter tag works, manager can install widget

--- a/views/admin-lte/cm-admin/index.ejs
+++ b/views/admin-lte/cm-admin/index.ejs
@@ -25,13 +25,8 @@
 </div><!-- ./wrapper -->
 
 <script type="text/ng-template" id="/cm-admin-html.tpl">
-    <ul  >
-        <li><a href="#/categories">Manage Categories</a></li>
-        <li><a href="#/widgets">Manage Widgets</a></li>
-        <li><a href="#/tabs">Manage Tabs</a></li>
-        <li><a href="#/category-recommendations">Category Recommendations</a></li>
-
-    </ul>
+    <h4>Welcome to Administration Page</h4>
+    Please pick a task from the menu above.
 </script>
 
 <% include ../jsfooter %>
