--- a/views/admin-lte/treeNode/nodeAnalytics/nodeAnalyticsActionBar.ejs
+++ b/views/admin-lte/treeNode/nodeAnalytics/nodeAnalyticsActionBar.ejs
@@ -1,7 +1,7 @@
 <ul class="">
     <li ng-show="isAdmin || isOwner || isManager || isNodeOwner">
         <a style="cursor: pointer;"
-           data-toggle="modal" data-target="#widgetGalleryNodeAnalytics"
+           data-toggle="modal" data-target="#widgetGalleryAnalytics"
            title="Add or remove preview widgets">
             <i class="ionicons ion-android-apps"></i> &nbsp; WIDGETS STORE</a>
     </li>
