--- a/views/ui-widgets/html-sidebar/html-sidebar.ejs
+++ b/views/ui-widgets/html-sidebar/html-sidebar.ejs
@@ -33,7 +33,7 @@
                                                ng-model="widgetData.widget">
                                     </div>
                                 </div>
-                                <div class="control-group">
+                                <div class="control-group description">
                                     <p></p>
                                     <label class="control-label" for="description">HTML Content</label>
 
