--- a/views/admin-lte/cm-admin/mainMenu.ejs
+++ b/views/admin-lte/cm-admin/mainMenu.ejs
@@ -17,7 +17,7 @@
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Manage <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="#/categories">Categories</a></li>
-                            <li><a href="#/widgets">Widgets</a></li>
+                            <li><a href="#/widgets">Widgets and Background Plugins</a></li>
                             <li><a href="#/tabs">Tabs</a></li>
                             <li><a href="#/category-recommendations">Category Recommendations</a></li>
                         </ul>
