can delete course

--- a/views/admin-lte/catalogs/courseDetail.ejs
+++ b/views/admin-lte/catalogs/courseDetail.ejs
@@ -47,6 +47,10 @@
 </section>
 <!-- /.content -->
 
+<section class="delete-notice" ng-show="isDeleted" style="padding: 15px;">
+    <h4>Course is deleted.</h4>
+</section>
+
 <!-- modal contents -->
 <% include courseDetailModals %>
 <div ng-include="'/accounts/loginform'"></div>
