--- a/views/admin-lte/catalogs/courseConfigModal.ejs
+++ b/views/admin-lte/catalogs/courseConfigModal.ejs
@@ -74,8 +74,10 @@
                             <% if(isInIframe){ %>
                             <% } else { %>
                             <div class="control-group">
-                                <label class="control-label" for="description">Embed Settings<br>
-                                    <small>These settings will take effect only if the page is loaded through an iframe.</small>
+                                <label class="control-label">Embed Settings<br>
+                                    <small>These settings will take effect only if the page is loaded through an
+                                        iframe.
+                                    </small>
                                 </label>
 
                                 <div class="form-group">
@@ -99,7 +101,14 @@
                                 </div>
                             </div>
                             <% } %>
+                            <div class="control-group" ng-show="isOwner || isAdmin">
+                                <label class="control-label">Delete Course<br>
+                                    <small>If you are sure you want to delete this course, please click this link below.
+                                    </small>
+                                </label><br>
+                                <a class="cursor" ng-click="deleteCourse();">Delete Course</a>
 
+                            </div>
                             <div class="control-group">
                                 <br class="clear">
 
