--- a/views/admin-lte/catalogs/courseConfigModal.ejs
+++ b/views/admin-lte/catalogs/courseConfigModal.ejs
@@ -103,7 +103,7 @@
                             <% } %>
                             <div class="control-group" ng-show="isOwner || isAdmin">
                                 <label class="control-label">Delete Course<br>
-                                    <small>If you are sure you want to delete this course, please click this link below.
+                                    <small>If you are sure that you want to delete this course, please click this link below.
                                     </small>
                                 </label><br>
                                 <a class="cursor" ng-click="deleteCourse();">Delete Course</a>
