--- a/views/admin-lte/treeNode/video/videoActionBar.ejs
+++ b/views/admin-lte/treeNode/video/videoActionBar.ejs
@@ -3,7 +3,7 @@
         You created this content node
     </li>
     <li ng-show="isOwner && isNodeOwner">
-        You created the course
+        You created this course
     </li>
     <li ng-show="isManager">
         You are a manager
