Setting up Peer Assessment Module structure within CM before running grunt task

--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -44,6 +44,8 @@
 <script src="/src/video-annotations/dest/video-annotations.js"></script>
 <script src="/src/countmap/countmap.js"></script>
 
+<script src="/angular-peerassessment/peerAssessment.controller.js"></script>
+
 <% if(typeof(isInNodeDetailPage) != 'undefined' && isInNodeDetailPage){ %>
 <!-- slide-viewer stuff -->
 <script src="/slide-viewer/js/jquery.fullscreen-min.js"></script>
