documentation to github

--- a/views/admin-lte/settings/settings.ejs
+++ b/views/admin-lte/settings/settings.ejs
@@ -40,7 +40,7 @@
                 </li>
 
                 <li>
-                    <a href="/settings/apps/#/documentation">
+                    <a href="http://r4ccoon.github.io/cm-api/" target="_blank">
                         <i class="fa fa-book"></i> Documentation</a>
                 </li>
 
