--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -1,5 +1,4 @@
 <!-- REQUIRED JS SCRIPTS -->
-
 <script src="/socket.io/socket.io.js"></script>
 
 <script src="/jquery/jquery.min.js"></script>
@@ -43,6 +42,7 @@
 <script src="/slide-viewer/js/directives/sa-annotationzone.js"></script>
 <script src="/src/video-annotations/dest/video-annotations.js"></script>
 <script src="/src/countmap/countmap.js"></script>
+<script src="/src/heartbeat/video-pulse.js"></script>
 
 <% if(typeof(isInNodeDetailPage) != 'undefined' && isInNodeDetailPage){ %>
 <!-- slide-viewer stuff -->
