--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -40,7 +40,7 @@
 <script src="/libs/videogular-youtube/youtube.js"></script>
 
 <script src="/slide-viewer/js/directives/sa-annotationzone.js"></script>
-<script src="/src/video-annotations/dest/video-annotations.js"></script>
+<script src="/build/video-annotations.js"></script>
 <script src="/src/countmap/countmap.js"></script>
 <script src="/src/heartbeat/video-pulse.js"></script>
 
@@ -53,7 +53,7 @@
 <script src="/pdfjs/build/pdf.js"></script>
 <script src="/pdfjs/build/components/pdf_viewer.js"></script>
 <% } %>
-<script src="/angular/courseMapper.js"></script>
+<script src="/build/courseMapper.js"></script>
 <!-- AdminLTE App -->
 <script src="/admin-lte/js/app.min.js" type="text/javascript"></script>
 <script src="/admin-lte/js/libs.js" type="text/javascript"></script>
