--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -13,7 +13,6 @@
 <script src="/libs/lodash/lodash.min.js"></script>
 <script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="/bootstrap/js/bootstrap-hover-dropdown.min.js" type="text/javascript"></script>
-<script src="/bootstrap-timepicker/js/bootstrap-timepicker.js"></script>
 <script src="/angular/angular.min.js" type="text/javascript"></script>
 <script src="/angular/angular-route.min.js"></script>
 <script src="/angular/angular-animate.min.js"></script>
@@ -33,6 +32,7 @@
 <script src="/angular-toastr/angular-toastr.min.js"></script>
 <script src="/angular-toastr/angular-toastr.tpls.js"></script>
 
+<script src="/libs/bootstrap-timepicker/js/bootstrap-timepicker.min.js"></script>
 <script src="/libs/videogular/videogular.min.js"></script>
 <script src="/libs/videogular-controls/vg-controls.min.js"></script>
 <script src="/libs/videogular-angulartics/vg-analytics.min.js"></script>
