icon does not messed up when editing content node

--- a/views/admin-lte/course/map/map.ejs
+++ b/views/admin-lte/course/map/map.ejs
@@ -73,7 +73,7 @@
             </li>
 
             <li ng-show="hasPdf(data.resources)">
-                <a class="cursor" href="{{hasPdf(data.resources)}}" target="_blank"><i class="fa fa-file-pdf-o"></i> Download PDF</a>
+                <a class="cursor" href="{{getPdfLink(data.resources)}}" target="_blank"><i class="fa fa-file-pdf-o"></i> Download PDF</a>
             </li>
         </ul>
 
