--- a/views/admin-lte/catalogs/nodeDetail.ejs
+++ b/views/admin-lte/catalogs/nodeDetail.ejs
@@ -79,5 +79,7 @@
         //Set the min-height of the content and sidebar based on the
         //the height of the document.
         $(".content-wrapper #courseTabs").css('min-height', window_height - neg - neg2 - neg2);
+
+        $('[data-tooltip="tooltip"]').tooltip();
     });
 </script>
